CHANGES IN VERSION 1.4.4
------------------------
 o mixed column in summarize.csv is now consistent with report.html <2015-01-06, Tue>
 o use 454.fas instead of Contig.fna to do alignment <2015-01-05, Mon>
 o generateGapFile now accept summary.csv as input <2015-01-05, Mon>

CHANGES IN VERSION 1.4.3
------------------------
 o run gc() explicitly in autoReport <2014-12-30, Tue>
 o depend ggtree <2014-12-30, Tue>

CHANGES IN VERSION 1.4.2
------------------------
 o update docs <2014-12-17, Wed>
 o add LICENSE file <2014-12-17, Wed>
 o hamming S3 method that support BStringSet and character <2014-12-17, Wed>
 o read.phylip function <2014-12-17, Wed>

CHANGES IN VERSION 1.4.1
------------------------
 o update_skleid now detach skleid before upgrading it and reattach thereafter <2014-12-16, Tue>
 o catch error when windows throw no permission in reading alignment result <2014-12-16, Tue>
 o setNGS_ method for NGS object initial <2014-12-15, Mon>

CHANGES IN VERSION 1.4.0
------------------------
 o NGS class with toNGS constructor and
   getPosition and getSite functions to access
   N-glycosylation site info <2014-12-14, Sun>
 
CHANGES IN VERSION 1.3.3
------------------------
 o subtype in summary separate by | <2014-12-05, Fri>
 o add Mixed column in summary output <2014-12-05, Fri>
 o generateGapFile is now compatible with readFilename that contains duplicated record. <2014-12-03, Wed>
 o mergePhy function for merging two phylip files <2014-12-04, Thu>

CHANGES IN VERSION 1.3.2
------------------------
 o random say by says function <2014-12-03, Wed>
 o fixed in testing ambiguous location range between [10, length(x)-10] <2014-12-02, Tue>

CHANGES IN VERSION 1.3.1
------------------------
 o fixed in get ID that start with RL\\dGeneName_ <2014-12-02, Tue>
 o change test of NA in generateGapFile function. <2014-12-02, Tue>

CHANGES IN VERSION 1.3.0
------------------------
 o change gene order in summarize function <2014-12-01, Mon>